# LMUFFB

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  AGENTS_MEMORY.md  CHANGELOG.md  CHANGELOG_ARCHIVE_v0.6.x_and_older.md  CHANGELOG_DEV.md  CMakeLists.txt  CONTRIBUTORS.md  EULA.txt  FFBEngine.h  INSTALL.txt  LEGACY_JULES_ONLY_AGENTS.md  LEGACY_JULES_ONLY_AGENTS_MEMORY.md  LICENSE  LICENSE.txt  NEW_AGENTS.md  README.md  README.txt  TODO.md  USER_CHANGELOG.md  VERSION  build_commands.txt  code_review_v0.4.17.md  config.ini.bak  config.toml  count_tests.py  coverage_branches_summary.txt  coverage_functions_summary.txt  coverage_summary.txt  fix_all_files.py  fix_all_tests_final.py  fix_cmake_v2.py  fix_tests_v8.py  fix_tests_v9.py  fix_yaw_gyro.py  fixes_applied_v0.4.16.txt  full_test_log.txt  (+41 more)
.Jules/: palette.md
.gemini/: GEMINI.md  settings.json
.hive/: issues.jsonl
.jules/: fixer.md  palette.md
.specstory/: .gitignore  .project.json
builtin_presets/: Fanatec_Podium_DD1DD2.toml  GM_+_Yaw_Kick_DD_21_Nm_(Moza_R21_Ultra).toml  GM_DD_21_Nm_(Moza_R21_Ultra).toml  GT3_DD_15_Nm_(Simagic_Alpha).toml  Guide_Braking_Lockup.toml  Guide_Gyroscopic_Damping.toml  Guide_Oversteer_(Rear_Grip).toml  Guide_Slide_Texture_(Scrub).toml  Guide_SoP_Yaw_(Kick).toml  Guide_Traction_Loss_(Spin).toml  Guide_Understeer_(Front_Grip).toml  LMPxHY_DD_15_Nm_(Simagic_Alpha).toml  Logitech_G25G27G29G920.toml  T300_v0.7.164.toml  Test_Game_Base_FFB_Only.toml  Test_No_Effects.toml  Test_Rear_Align_Torque_Only.toml  Test_Slide_Texture_Only.toml  Test_SoP_Base_Only.toml  Test_SoP_Only.toml  Test_Textures_Only.toml  Test_Understeer_Only.toml  Test_Yaw_Kick_Only.toml  Thrustmaster_T300TX.toml
ccp_default_restructuring/: CMakeLists.txt
ccp_default_restructuring/docs/: ffb_customization.md  introduction.md
ccp_default_restructuring/docs/python_version/: performance_analysis.md  porting_guide_cpp.md
ccp_default_restructuring/python_prototype/: README.md
ccp_default_restructuring_v2/: main.cpp
ccp_default_restructuring_v5/: README.md
ccp_default_restructuring_v7/: CMakeLists.txt  README.md
ccp_default_restructuring_v7/docs/: licensing.md
ccp_default_restructuring_v7/python_prototype/LMUFFB/: shared_memory.py
ccp_default_restructuring_v8/: CMakeLists.txt  LICENSE  main.cpp
cpp_port/: README.md  main.cpp
default_config/: config.yaml
docs/: Driver's Guide to Testing LMUFFB  Driver's Guide to Testing LMUFFB.md  Dynamic Flatspot Suppression - User Guide.md  EXCLUSIVE_ACQUISITION_GUIDE.md  FFB Tuning Recommendations.md  Slope_Detection_Guide.md  architecture.md  available_tools.md  bug_report_bottoming_logic.md  changelog_naming_proposals.md  comparisons.md  coverage_boost_v3_report.md  coverage_boost_v4_report.md  coverage_boost_v5_report.md  coverage_boost_v6_challenges.md  coverage_improvement_report.md  encrypted_content_user_guide.md  ffb_customization.md  ffb_effects.md  ffb_engine_deep_dive.md  gui_framework_options.md  implementation_report_v0.3.md  investigation_vjoy_bundling.md  investigation_vjoyless_implementation.md  issue_27_messages.md  issue_316_description.md  performance_analysis.md  plan_guided_installer.md  plan_troubleshooting_FFB_visualizations.md  refactoring_report_v0636.md  report_on_ffb_improvements.md  roadmap.md  telemetry_monitoring_report.md  test_coverage_analysis.md  the_physics_of__feel_-_driver_guide.md  user_facing_changelog_guide.md
gemini_chats/: session-2025-11-08T19-13-2b86d262.md  session-2026-01-22T16-32-ad58cd86.md  session-2026-01-22T16-34-cd42464a.md  session-2026-01-22T16-36-c943e9f2.md  session-2026-01-22T16-37-e4fe9d72.md  session-2026-01-23T08-25-672728df.md  session-2026-01-23T08-28-9a67a220.md  session-2026-01-23T08-40-f3694b03.md  session-2026-01-23T08-50-68ae31af.md  session-2026-01-23T09-19-6d944d41.md  session-2026-01-23T09-46-68ae31af.md  session-2026-01-24T00-24-503baafe.md  session-2026-01-24T00-24-ce381848.md  session-2026-01-24T00-33-7b39811a.md  session-2026-01-24T00-53-84792261.md  session-2026-01-24T01-18-84792261.md  session-2026-01-24T09-43-f187716b.md  session-2026-01-24T09-45-aed59127.md  session-2026-01-24T10-39-aed59127.md  session-2026-01-24T15-30-2785d142.md  session-2026-01-25T19-36-4ed4bf76.md  session-2026-01-25T19-39-c5710646.md  session-2026-01-25T20-12-1e1a4408.md  session-2026-01-26T01-05-d99ac5d1.md  session-2026-01-26T01-07-5e51da37.md  session-2026-01-26T01-33-61ac0c60.md  session-2026-01-26T01-51-61ac0c60.md  session-2026-01-26T08-23-8fce228c.md  session-2026-01-26T08-39-7215b09d.md  session-2026-01-31T13-58-9bea0cee.md  session-2026-01-31T13-58-feb6546e.md  session-2026-01-31T14-05-f10a8e4d.md  session-2026-01-31T14-13-3e627de7.md  session-2026-01-31T14-14-6cdf3edc.md  session-2026-01-31T14-18-9bcb480a.md  session-2026-01-31T14-59-9bcb480a.md  session-2026-01-31T15-04-9bcb480a.md  session-2026-01-31T17-37-9bcb480a.md  session-2026-01-31T18-53-d2109ffa.md  session-2026-01-31T19-22-d2109ffa.md  (+12 more)
icon/: icon.psd  (+1 more)
tests/: CMakeLists.txt  main_test_runner.cpp  repro_issue_290.cpp  repro_issue_446.cpp  repro_issue_475.cpp  repro_issue_481.cpp  repro_issue_511.cpp  test_async_logger.cpp  test_async_logger_binary.cpp  test_async_logger_lz4.cpp  test_audit_regressions.cpp  test_bottoming.cpp  test_config_comprehensive.cpp  test_coverage_boost.cpp  test_coverage_boost_v10.cpp  test_coverage_boost_v2.cpp  test_coverage_boost_v3.cpp  test_coverage_boost_v4.cpp  test_coverage_boost_v5.cpp  test_coverage_boost_v6.cpp  test_coverage_boost_v7.cpp  test_coverage_boost_v8.cpp  test_coverage_boost_v9.cpp  test_coverage_expansion.cpp  test_create_context_extended.py  test_create_context_script.py  test_distribution_bundle.cpp  test_dxgi_modernization.cpp  test_ffb_accuracy_tools.cpp  test_ffb_advanced_slope.cpp  test_ffb_common.cpp  test_ffb_common.h  test_ffb_config.cpp  test_ffb_coordinates.cpp  test_ffb_core_physics.cpp  test_ffb_coverage_refactor.cpp  test_ffb_coverage_target.cpp  test_ffb_diag_updates.cpp  test_ffb_dynamic_normalization.cpp  test_ffb_dynamic_weight.cpp  (+137 more)
tests/linux_mock/: windows.h
(+17026 files in other folders)
